--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Moja pierwsza strona</title>
+    <meta charset="UTF-8">
+    <title>Hehelandia</title>
 </head>
 <body>
-    <h1>Witaj na mojej stronie!</h1>
-    <p>To jest moja strona hostowana na GitHub Pages.</p>
+    <h1>Hehelandia</h1>
+    <p>Witaj na stronie Hehelandia! Poniżej możesz pobrać kilka plików:</p>
+
+    <ul>
+        <li><a href="plik1.txt" download>Pobierz plik1.txt</a></li>
+        <li><a href="plik2.pdf" download>Pobierz plik2.pdf</a></li>
+        <li><a href="plik3.zip" download>Pobierz plik3.zip</a></li>
+    </ul>
+
+    <p>Miłego korzystania!</p>
 </body>
 </html>
