--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Hehelandia</title>
 </head>
-<body>
+<body bgcolor = black text = green>
     <h1>Hehelandia</h1>
     <p>Witaj na stronie Hehelandia! Poniżej możesz pobrać kilka plików:</p>
 
