--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <p>Witaj na stronie Hehelandia! Poniżej możesz pobrać kilka plików:</p>
 
     <ul>
-        <li><a href="plik1.txt" download>Pobierz plik1.txt</a></li>
-        <li><a href="plik2.pdf" download>Pobierz plik2.pdf</a></li>
+        <li><a href="Zombatar_1.jpg" download>Pobierz plik1.txt</a></li>
+        <li><a href="Zombatar_2.jpg" download>Pobierz plik2.pdf</a></li>
         <li><a href="plik3.zip" download>Pobierz plik3.zip</a></li>
     </ul>
 
