--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="Zombatar_1.jpg" download>Zombatar 1 - Żyd</a></li>
         <li><a href="Zombatar_2.jpg" download>Zombatar 2 - Pirat Siedmiu Mórz</a></li>
-        <li><a href="plik3.zip" download>Pobierz plik3.zip</a></li>
+        <li><a href="Zombatar_3" download>Ochroniarz</a></li>
     </ul>
 
     <p>Miłego korzystania!</p>
