--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <li><a href="Zombatar_1.jpg" download>Zombatar 1 - Żyd</a></li>
         <li><a href="Zombatar_2.jpg" download>Zombatar 2 - Pirat Siedmiu Mórz</a></li>
         <li><a href="Zombatar_3.jpg" download>Zombatar 3 - Ochroniarz</a></li>
+
+        <a href="strona.html">
+  <img src="Picsart_25-12-15_14-05-741.jpg" alt="Kliknij mnie">
+</a>
+
     </ul>
 
     <p>Miłego korzystania!</p>
