--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title>Hehelandia</title>
 </head>
-<body bgcolor=black text=red>
+<body style="background-color:black; color:red;">
     <h1>Hehelandia</h1>
     <p>Witaj na stronie Hehelandia! Poniżej możesz pobrać kilka plików:</p>
 
@@ -11,11 +12,11 @@
         <li><a href="Zombatar_1.jpg" download>Zombatar 1 - Żyd</a></li>
         <li><a href="Zombatar_2.jpg" download>Zombatar 2 - Pirat Siedmiu Mórz</a></li>
         <li><a href="Zombatar_3.jpg" download>Zombatar 3 - Ochroniarz</a></li>
-
-        <a href="www.youtube.com/@Mik%C3%B3%C5%9B-TheDimentionDestroyer">
-  <img src="Picsart_25-12-15_14-05-33-741.jpg" alt="Kliknij mnie">
-</a>
-
+        <li>
+            <a href="https://www.youtube.com/@Mik%C3%B3%C5%9B-TheDimentionDestroyer">
+                <img src="Picsart_25-12-15_14-05-33-741.jpg" alt="Kliknij mnie">
+            </a>
+        </li>
     </ul>
 
     <p>Miłego korzystania!</p>
