--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
         <li><a href="Zombatar_2.jpg" download>Zombatar 2 - Pirat Siedmiu Mórz</a></li>
         <li><a href="Zombatar_3.jpg" download>Zombatar 3 - Ochroniarz</a></li>
         <li>
-            
             <a href="https://www.youtube.com/@Mik%C3%B3%C5%9B-TheDimentionDestroyer">
                 <img src="Picsart_25-12-15_14-05-33-741.jpg" alt="Kliknij mnie">
             </a>
         </li>
+    </ul>
+
+    <p>Miłego korzystania!</p>
+</body>
+</html>
+
     </ul>
 
     <p>Miłego korzystania!</p>
